# api-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  start.py
backend/: __init__.py  app.py
backend/routes/: __init__.py  health.py  upload.py
config/: __init__.py  services.py  upload.py
configs/: __init__.py  graylog.py  services.py
routers/: __init__.py  audio.py  auth.py  exercises.py  health.py  sound.py  tasks.py  texts.py
routers/utils/: embeded.py  http_proxy.py  pagination.py  protection.py  sse_proxy.py
schemas/: __init__.py  audio.py  auth.py  exercises.py  tasks.py  texts.py
schemas/examples/: auth.py  tasks.py
service_logging/: setup.py
utils/: __init__.py  authorization.py
