[project]
name = "ilps-backend"
version = "1.0.0"
description = "Backend server for the pronunciation simulator"
authors = [
    {name = "Oidaho", email = "oidaho.main@yandex.ru"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://github.com/FEFU-ILPS/Backend"
"Bug Tracker" = "https://github.com/FEFU-ILPS/Backend/issues"

